Fix forum post spacing

--- a/clockwork/static/css/style.css
+++ b/clockwork/static/css/style.css
@@ -134,7 +134,3 @@
 td.username, td.armory_link, td.rank {
     width: 33%;
 }
-
-table {
-    table-layout: fixed;
-}
